2014-10-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33564: Test/A05execution.ztst: more care with monitor option.

	* 33542: Test/A05execution.ztst: test previous patch.

	* 33531 (plus fix to test job pointer and removing
	lastpid_status): Doc/Zsh/builtins.yo, Doc/Zsh/options.yo,
	Src/exec.c, Src/init.c, Src/jobs.c, Src/linklist.c,
	Src/signals.c: retain up to CHILD_MAX statuses of exited
	background processes; remove old lastpid_status mechanism;
	slightly improve safety of permanently allocated linked lists.

2014-10-24  Barton E. Schaefer  <schaefer@zsh.org>

	* 33526: Completion/Unix/Type/_path_files: fix path prefix
	handling when NO_CASE_GLOB is in effect

2014-10-24  Peter Stephenson  <p.stephenson@samsung.com>

	* 33480 slightly tweaked: Src/Zle/zle_tricky.c: fix completion
	after $' but before closing quote (if any).

2014-10-24  Mikael Magnusson  <mikachu@gmail.com>

	* 33485: Completion/Unix/Command/_su: fix a missing ;; case
	terminator

2014-10-23  Oliver Kiddle  <opk@zsh.org>

	* 33520: Src/Zle/zle_vi.c, Test/X02zlevi.ztst: correct cursor
	positioning following a vi mode yank operation

	* unposted: .editorconfig: specify 8 char indent for ChangeLog

	* 33519: Src/Zle/zle_move.c, Test/X02zlevi.ztst: last character
	in the buffer can be cut, changed or yanked using vi-forward-char

	* 33518: Doc/Zsh/zle.yo, Src/Zle/zle.h, Src/Zle/zle_utils.c,
	Src/Zle/zle_vi.c, Test/X02zlevi.ztst: add support for "_ vi
	buffer and arguments to vi-set-buffer from a zle widget

	* 33514: Src/Zle/zle_utils.c: even with a named vi buffer, we
	should update the default buffer

	* 33513: Src/Zle/iwidgets.list: vi mode deletions should replace
	cut buffer not append to it

	* 33512: Src/Zle/zle.h, Src/Zle/zle_main.c, Src/Zle/zle_utils.c,
	Src/Zle/zle_vi.c: add support for "0 vi buffer and yank to it

2014-10-22  Barton E. Schaefer  <schaefer@zsh.org>

	* 33515: Src/Zle/compmatch.c: suppress parser error messages in
	comp_match()
